<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="match_parent"
    tools:context=".editar_users">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageEdit"
            android:layout_width="96dp"
            android:layout_height="112dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/editar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="554dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/EDITAR"
            android:textSize="30dp"

            android:textStyle="bold" />

        <EditText
            android:id="@+id/etApart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_style"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/hogar"
            android:inputType="textPersonName"
            android:drawablePadding="10dp"
            android:hint="@string/infoapart" />

        <EditText
            android:id="@+id/etPais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_style"
            android:ems="10"
            android:drawableLeft="@drawable/mapa"
            android:drawablePadding="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:inputType="textPersonName"
            android:hint="@string/pais" />

        <EditText
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_style"
            android:ems="10"
            android:drawableLeft="@drawable/ciudad"
            android:drawablePadding="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="15dp"
            android:inputType="textPersonName"
            android:hint="@string/ciudad" />

        <EditText
            android:id="@+id/etDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_style"
            android:ems="10"
            android:drawableLeft="@drawable/direccion"
            android:drawablePadding="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:inputType="textPersonName"
            android:hint="@string/direccion" />

        <EditText
            android:id="@+id/etDescrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_style"
            android:ems="10"
            android:drawableLeft="@drawable/descripcion"
            android:drawablePadding="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:inputType="textPersonName"
            android:hint="@string/descripcion" />

        <EditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_style"
            android:ems="10"
            android:drawableLeft="@drawable/precio"
            android:drawablePadding="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:inputType="textPersonName"
            android:hint="@string/precio" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/btn_style"
                android:onClick="actualizar"
                android:text="@string/EDITAR" />

            <Button
                android:id="@+id/btVol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="15dp"
                android:background="@drawable/btn_style"
                android:onClick="volverEdit"
                android:text="@string/volver" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>